# google-forms-mcp

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  docker-compose.yml  generate_token.py  pyproject.toml  refactor_forms.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
examples/: README.md  attendance.json  custom_workflow.json  employee_feedback.json  event_rsvp.json  feedback_form.json  hackathon_registration.json  placement_form.json  quiz.json  research_survey.json  student_registration.json
src/google_forms_mcp/: __init__.py  __main__.py  config.py  server.py
src/google_forms_mcp/auth/: __init__.py  credential_manager.py  manager.py  oauth.py  token_manager.py  token_store.py
src/google_forms_mcp/clients/: __init__.py  base_client.py  drive_client.py  forms_client.py  sheets_client.py
src/google_forms_mcp/exceptions/: __init__.py  errors.py
src/google_forms_mcp/infrastructure/: __init__.py  cache.py  logging.py  rate_limiter.py  retry.py
src/google_forms_mcp/models/: __init__.py  drive.py  form.py  response.py  sheets.py
src/google_forms_mcp/prompts/: planning.py  templates.py
src/google_forms_mcp/resources/: __init__.py  forms.py
src/google_forms_mcp/services/: __init__.py  analytics_service.py  drive_service.py  forms_service.py  sheets_service.py
src/google_forms_mcp/tools/: __init__.py
src/google_forms_mcp/tools/ai/: __init__.py
src/google_forms_mcp/tools/drive/: __init__.py  tools.py
src/google_forms_mcp/tools/forms/: __init__.py  tools.py
src/google_forms_mcp/tools/planning/: __init__.py  tools.py
src/google_forms_mcp/tools/sheets/: __init__.py  tools.py
tests/: conftest.py  test_auth.py  test_clients.py  test_exceptions.py  test_models.py  test_planning.py  test_rate_limiter.py  test_server.py  test_services.py  test_token_manager.py
